# annotation_metrics

./: README.md  pyproject.toml
src/annotation_metrics/: compute_metrics_for_alignment.ipynb  generate_metrics_paths.py  get_correlation_plot.py  save_correlation_plots.py  save_stim_metrics_for_alignment.py  spike_utils.py
